<resources>
    <string name="app_name">GuardianScope</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preferences_button_cd">Preferences Button</string>
    <string name="discover">Discover</string>
    <string name="dot_cd">Dot</string>
    <string name="search_icon_cd">Search icon</string>
    <string name="education">Education</string>
    <string name="fashion">Fashion</string>
    <string name="environment">Environment</string>
    <string name="food">Food</string>
    <string name="media">Media</string>
    <string name="heart_icon_cd">Heart Icon</string>
    <string name="bookmark_icon_cd">Bookmark Icon</string>
    <string name="trending_news">Trending News</string>
    <string name="article_thumbnail_cd">Article Thumbnail</string>
    <string name="article_by">By %s</string>
    <string name="no_articles_message">No articles to show.</string>
    <string name="error_message">Something went wrong..</string>
    <string name="check_connectivity">Please check your internet connection.</string>
    <string name="no_internet_connection_cd">No internet connection</string>
    <string name="politics">Politics</string>
    <string name="go_back_button_cd">Go back button</string>
    <string name="favourite_button_cd">Favourite button</string>
    <string name="article_image_cd">Article image</string>
    <string name="share_to_facebook_cd">Share to Facebook</string>
    <string name="share_button_cd">Share button</string>
    <string name="share_to_twitter_button_cd">Share to Twitter button</string>
    <string name="favourite_success">Article favourited Successfully!</string>
    <string name="favourite_failure">Article wasn\'t favourited</string>
    <string name="unfavourite_success">Article was unfavoured successfully.</string>
    <string name="search">Search</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="start_bookmarking_articles_n_to_appeare_here">Start bookmarking articles\n to appeare here!</string>
    <string name="sync_header">Sync</string>

    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sync_on">Sync with The Guardian On</string>
    <string name="general_header">General</string>
    <string name="dark_mode_title">Dark Mode</string>
    <string name="dark_mode_key">dark_mode</string>
    <string name="keep_bookmarks_title">Keep Bookmarks For Ever</string>
    <string name="keep_bookmarks_key">keep_bookmarks</string>
    <string name="sync_key">sync_on</string>
    <string name="sync_period_key">sync_period</string>
    <string name="sync_period_title">Sync Period</string>
    <string name="categories_key">categories</string>
    <string name="categories_title">Categories</string>
</resources>
