<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_reader_scene">

    <ImageView
        android:id="@+id/article_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/article_image_cd"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/app_bar"
        app:layout_constraintVertical_bias="0"
        tools:background="@color/colorGrey" />

    <TextView
        android:id="@+id/section_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/colorDarkerGrey"
        app:layout_constraintBottom_toBottomOf="@id/article_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44"
        tools:text="Entertainment" />

    <TextView
        android:id="@+id/article_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/abril_fatface"
        android:shadowColor="@android:color/black"
        android:shadowDx="-1"
        android:shadowDy="2"
        android:shadowRadius="0.01"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/article_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/section_name"
        app:layout_constraintVertical_bias="0"
        tools:text="Once Upon A Time In Hollywood.." />

    <TextView
        android:id="@+id/article_pub_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/abril_fatface"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textColor="@color/colorDarkerGrey"
        app:layout_constraintBottom_toBottomOf="@id/article_image"
        app:layout_constraintEnd_toStartOf="@id/article_author_image"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        tools:text="11 Nov, 2020" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/article_author_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@color/colorDarkerGrey"
        app:civ_border_color="@color/colorDot"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="@id/article_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/go_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/go_back_button_cd"
                android:padding="16dp"
                android:src="@drawable/ic_baseline_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/favourite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/favourite_button_cd"
                android:paddingStart="8dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:src="@drawable/ic_heart_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/bookmark_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/favourite_button_cd"
                android:paddingStart="8dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:src="@drawable/ic_bookmark_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/favourite_button"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageButton
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/share_button_cd"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:src="@drawable/ic_share_social"
        app:layout_constraintBottom_toTopOf="@id/body_scroll_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/share_to_twitter_button"
        app:layout_constraintTop_toBottomOf="@id/article_image"
        app:layout_constraintVertical_bias="0" />


    <ImageButton
        android:id="@+id/share_to_twitter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/share_to_twitter_button_cd"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:src="@drawable/ic_logo_twitter"
        app:layout_constraintBottom_toTopOf="@id/body_scroll_view"
        app:layout_constraintEnd_toStartOf="@+id/share_button"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/article_image"
        app:layout_constraintVertical_bias="0" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/body_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/share_to_twitter_button">

        <org.sufficientlysecure.htmltextview.HtmlTextView
            android:id="@+id/article_body"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:fontFamily="@font/titillium_web_light"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textIsSelectable="true" />
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.motion.widget.MotionLayout>